KB-35 run as boot app, and as war app